force-app/main/default/objects/LoanApplicant/fields/Applicant_Is_Suspicious__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Is_Suspicious__c</fullName>
    <formula>IF(Applicant_Suspiciousness__c == 1,&apos;Yes&apos;,&apos;No&apos;)</formula>
    <inlineHelpText>Is the applicant suspicious based on the question on the Transaction Checklist form?</inlineHelpText>
    <label>Is Suspicious?</label>
    <type>Text</type>
</CustomField>