force-app/main/default/objects/LoanApplicant/fields/Applicant_Risk_Points__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Risk_Points__c</fullName>
    <inlineHelpText>The sum of points scored by the Applicant on the Risk Assessment Form.</inlineHelpText>
    <label>Applicant Risk Points</label>
    <summarizedField>Compliance__c.CR_Rating__c</summarizedField>
    <summaryForeignKey>Compliance__c.Applicant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>