force-app/main/default/objects/LoanApplicant/fields/Applicant_Suspiciousness__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Suspiciousness__c</fullName>
    <label>Applicant Suspiciousness</label>
    <summarizedField>Compliance__c.If_yes__c</summarizedField>
    <summaryFilterItems>
        <field>Compliance__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Transaction checklist</value>
    </summaryFilterItems>
    <summaryForeignKey>Compliance__c.Applicant__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>