force-app/main/default/objects/LoanApplicant/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <inlineHelpText>Enter First and Last Name of the applicant if its an individual, or the legal name of the corporation if the applicant is a company.</inlineHelpText>
    <label>Full Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>