force-app/main/default/objects/LoanApplicant/fields/IsGSA__c.field-meta.xml
<CustomField>
    <fullName>IsGSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGSA</label>
    <type>Checkbox</type>
</CustomField>