force-app/main/default/objects/LoanApplicant/fields/IsGuarantee__c.field-meta.xml
<CustomField>
    <fullName>IsGuarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGuarantee</label>
    <type>Checkbox</type>
</CustomField>