force-app/main/default/objects/LoanApplicant/fields/RIsk_Rating3__c.field-meta.xml
<CustomField>
    <fullName>RIsk_Rating3__c</fullName>
    <formula>IF(Applicant_Risk_Points__c &gt; 8 || Applicant_Is_Suspicious__c = &apos;Yes&apos;,
IMAGE(&quot;https://altawestcapital--devcj1.sandbox.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068G1000000d4QL&amp;operationContext=DELIVERY&amp;contentId=05TG1000001abdB&amp;page=0&amp;d=/a/G10000001JlN/fGo1ap_6S266AftBaEen3mnANWOfQ04djodiR98PmCY&amp;oid=00DD7000000o5n7&amp;dpt=null&amp;viewId=&quot;,&apos;High&apos;,30,30),
IMAGE(&quot;https://altawestcapital--devcj1.sandbox.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=068G1000000d4Oj&amp;operationContext=DELIVERY&amp;contentId=05TG1000001abbZ&amp;page=0&amp;d=/a/G10000001Jjl/iy__d7sZm.sfDjQgVIesqSm9bs21Dt9yyNz0jETDaNM&amp;oid=00DD7000000o5n7&amp;dpt=null&amp;viewId=&quot;,&apos;Low&apos;,30,30))</formula>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>