force-app/main/default/objects/LoanApplicant/fields/RIsk_Rating__c.field-meta.xml
<CustomField>
    <fullName>RIsk_Rating__c</fullName>
    <formula>IF(Applicant_Risk_Points__c &gt; 8,&apos;High&apos;,&apos;Low&apos;)</formula>
    <inlineHelpText>The final risk rating of the applicant is based on the points scored in the Client Risk Assessment form.</inlineHelpText>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>